# topographer

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
examples/: split_workflow.py
src/topograph/: __init__.py  cli.py  examples.py  main.py  version.py
src/topograph/cli/: _validation.py  contour_tree.py  io.py  join_tree.py  main.py  persistence.py  run.py  simplify.py  split_tree.py
src/topograph/core/: graph_check.py  uniqueness.py
src/topograph/gun/: __init__.py  load.py  shoot.py
src/topograph/io/: __init__.py  convert.py  load.py  save.py
src/topographer/: __init__.py  cli.py
src/topographer/algorithms/: __init__.py  _critical.py  _merge_rules.py  _sweep.py  augmentation.py  contour_merge.py  contour_tree.py  degree_reduction.py  join_tree.py  merge_tree.py  persistence.py  simplification.py  split_tree.py
src/topographer/cli/: __init__.py  _validation.py  augment.py  contour_tree.py  io.py  join_tree.py  main.py  persistence.py  perturb.py  run.py  simplify.py  split_tree.py  tree.py
src/topographer/core/: __init__.py  graph_check.py  ordering.py  unionfind.py  uniqueness.py
src/topographer/models/: __init__.py  arc.py  contour_tree.py  critical_point.py  persistence.py  split_join.py  tree.py
src/topographer/plotting/: __init__.py  draw.py  export.py  layout.py  (+1 more)
tests/: test_algorithm_helpers.py  test_cli.py  test_cli_tree.py  test_contour_tree.py  test_graph_check.py  test_io.py  test_ordering.py  test_persistence.py  test_perturb.py  test_plotting_draw.py  test_simplification.py  test_split_join.py  test_split_join_algorithms.py  test_unionfind.py  test_uniquess.py  test_validation.py
(+4 files in other folders)
