[project]
name = "topograph"
version = "0.0.1"
description = "Topological analysis on graphs and networks."
authors = [
  { name = "Igors Dubanevics" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"
dependencies = [
  "networkx>=3.0",
]
scripts = { topograph = "topograph.main:app" }


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["topograph"]
force-sort-within-sections = true

